# ban_cadastre

./: .gitignore  Cargo.toml  README.md  kepler.ps1
data/: .gitignore  departements.csv
data/ban_cadastre/: analysis_report.md  departments_summary.csv  full_run.txt  national_summary.json
data/ban_cadastre/output/: france_parcelles_adresses.parquet  national_qa_distance_tiers.csv  national_qa_precision.csv
kepler/: .gitignore  README.md
scripts/: export_kepler.ps1  export_kepler.sh
src/: cli.rs  indexer.rs  link_mode.rs  loader.rs  main.rs  matcher.rs  structures.rs  writer.rs
src/analysis/: mod.rs
src/pipeline/: aggregate.rs  download.rs  match_step.rs  mod.rs  prepare.rs  qa.rs  state.rs  status.rs
