[package]
name = "ban-cadastre"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
duckdb = { version = "1.4", features = ["bundled"] }
polars = { version = "0.52.0", features = ["lazy", "parquet", "is_in", "csv", "dtype-struct", "timezones", "strings"] }
parquet = "57.1"
arrow = "57.1"
geo = "0.32"
rstar = "0.12"
geozero = { version = "0.15", features = ["with-wkb"]}
reqwest = { version = "0.12.25", features = ["blocking"] }
flate2 = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"
